--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <meta name="referrer" content="no-referrer">
     <div id="app"></div>
     <script type="module" src="src/main.js"></script>
   </body>
